--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.tmp
 *.log
+Properties/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
